--- a/common/demo.scss
+++ b/common/demo.scss
@@ -256,5 +256,12 @@ page{
 	}
 	
 }
-
+.app-zhiding{
+	position: fixed;
+	right: 40upx;
+	bottom: 80upx;
+	width: 64upx;
+	height: 64upx;
+	border-radius: 100%;
+}
 /* end--演示页面使用的统一样式--end */
